Add SearchBox component

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -3,6 +3,7 @@ $font-size-root: 16px;
 $font-size-base: 16px;
 $max-width: 1024px;
 $body-background: #fff;
+$body-color: #444;
 
 $color-brand-primary: #0d88f6;
 $color-brand-secondary: #105687;
